--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "hashrouter": "^1.1.1",
     "leaflet": "^1.9.4",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -54,5 +56,5 @@
     "@types/leaflet": "^1.9.15",
     "gh-pages": "^6.3.0"
   },
-  "homepage": "http://chris-code1.github.io/my-app"
+  "homepage": "http://chris-code1.github.io/open-data-stuttgart"
 }
